--- a/index.html
+++ b/index.html
@@ -1,94 +1,164 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>3 star media</title>
-</head>
-<body>
-  
-<header>
-
-  <nav>
-    <div class="container">
-
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>3 star media</title>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <div class="container">
           <img src="images/logo.png" alt="Three Star Media">
-
           <ul>
-                <li> <a href="#">Home</a></li>
-                <li> <a href="#">About Us</a></li>
-                <li> <a href="#">Services</a></li>
-                <li> <a href="#">Team</a></li>
-                <li> <a href="#">Contact Us</a></li>
+            <li> <a href="#">Home</a></li>
+            <li> <a href="#">About Us</a></li>
+            <li> <a href="#">Services</a></li>
+            <li> <a href="#">Team</a></li>
+            <li> <a href="#">Contact Us</a></li>
           </ul>
-
           <form>
-                <input type="search">
-                <button>	
-                  	&#128269;</button>
-
+            <input type="search">
+            <button>	
+            &#128269;</button>
           </form>
-
-    </div> <!--end container-->
-
-  </nav>
-
-  <div class="header-welcome">
-    <div class="container">
-    <h1>Welcome to Three Star Media</h1>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt vitae inventore nostrum reprehenderit officia officiis, excepturi hic corporis recusandae, voluptatibus repudiandae velit temporibus ullam, possimus sint iste quo in et?</p>
-    <button>Connect with us ▶</button>
-     </div><!--end container-->
-</header>
-
-
-<main>
-
-  <section class="section-about">
-    <div class="container">
-        <!--image on the left, heading and paragraph on the right using flexbox-->
-    </div><!--end container-->
-</section> <!--end section-about-->
-
-<section class="section-services">
-  <div class="container">
-      <!--h2 heading, 5 divs each with h3 image, text and button, on a grid-->
-  </div><!--end container-->
-</section> <!--end section-services-->
-
-<section class="section-vision">
-  <div class="container">
-      <!--h3 paragraph and button -->
-  </div><!--end container-->
-</section> <!--end section-vision-->
-
-<section class="section-team">
-  <div class="container">
-      <!--h2, 2 divs with an image, 2 divs with h3 h4 paragraph of text on a grid-->
-  </div><!--end container-->
-</section> <!--end section-team-->
-
-<section class="section-contact">
-  <div class="container">
-      <!--h2, form, google maps embed, table on a grid-->
-  </div><!--end container-->
-</section> <!--end section-contact-->
-
-</main>
-
-
-
-<footer>
-<div class="container">
-
-  <!--2 paragraphs of text-->
-
-</div>
-
-</footer>
-
-
-
-</body>
+        </div>
+        <!--end container-->
+      </nav>
+      <div class="header-welcome">
+      <div class="container">
+        <img src="images/main-banner.jpg">
+        <h1>Welcome to Three Star Media</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt vitae inventore nostrum reprehenderit officia officiis, excepturi hic corporis recusandae, voluptatibus repudiandae velit temporibus ullam, possimus sint iste quo in et?</p>
+        <button>Connect with us ▶</button>
+      </div>
+      <!--end container-->
+    </header>
+    <main>
+      <section class="section-about">
+        <div class="container">
+          <!--image on the left, heading and paragraph on the right using flexbox-->
+          <img src="Images/about-us.jpg">
+          <h2>About Us</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Libero unde repellendus exercitationem asperiores ducimus placeat, maxime soluta nesciunt pariatur aliquam consequuntur sequi saepe sint praesentium laboriosam perferendis eius amet ad?
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Animi, velit ipsam? Atque accusamus, excepturi corrupti sunt reiciendis soluta quo commodi guidem, non perferendis vel sed facilis rerum cum in exercitationem?
+          </p>
+        </div>
+        <!--end container-->
+      </section>
+      <!--end section-about-->
+      <section class="section-services">
+        <div class="container">
+          <!--h2 heading, 5 divs each with h3 image, text and button, on a grid-->
+          <h2>Our Services</h2>
+          <div class="digital transformation">
+            <img src="Images/digital.jpg">
+            <h3>Digital Transformation</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Eius vel, rem inventore quo tempora animi mollitia eaque error qui consectetur in reprehenderit magnam at vitae corporis quaerat deleniti explicabo nisi?</p>
+            <button>Digital Plans ▶</button>
+          </div>
+          <div class="marketing">
+            <img src="images/marketing.jpg">
+            <h3>Marketing</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Eius vel, rem inventore quo tempora animi mollitia eaque error qui consectetur in reprehenderit magnam at vitae corporis quaerat deleniti explicabo nisi?</p>
+            <button>Marketing Plans ▶</button>
+          </div>
+          <div class="video production">
+            <img src="images/video.jpg">
+            <h3>Video Production</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Eius vel, rem inventore quo tempora animi mollitia eaque error qui consectetur in reprehenderit magnam at vitae corporis quaerat deleniti explicabo nisi?</p>
+            <button>Video Plans ▶</button>
+          </div>
+          <div class="web development">
+            <img src="images/web.jpg">
+            <h3>Web Development</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Eius vel, rem inventore quo tempora animi mollitia eaque error qui consectetur in reprehenderit magnam at vitae corporis quaerat deleniti explicabo nisi?</p>
+            <button>Web Plans ▶</button>
+          </div>
+          <div class="print plans">
+            <img src="images/print.jpg">
+            <h3>Print Plans</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Eius vel, rem inventore quo tempora animi mollitia eaque error qui consectetur in reprehenderit magnam at vitae corporis quaerat deleniti explicabo nisi?</p>
+            <button>Print Plans ▶</button>
+          </div>
+        </div>
+        <!--end container-->
+      </section>
+      <!--end section-services-->
+      <section class="section-vision">
+        <div class="container">
+          <!--h3 paragraph and button -->
+          <img src="images/vision.jpg">
+          <h3>Our Vision</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Ex voluptatem deleniti lure, sit, accusantium rerum est commodi veniam tempora perspiciatis nobis officiis fagiat eaque. Veritatis exercitationem delectus ex ab laudantium.</p>
+          <button>Learn More ▶ </button>
+        </div>
+        <!--end container-->
+      </section>
+      <!--end section-vision-->
+      <section class="section-team">
+        <div class="container">
+          <!--h2, 2 divs with an image, 2 divs with h3 h4 paragraph of text on a grid-->
+          <h2>Our Team</h2>
+          <div class="ceo">
+            <img src="images/john.jpg">
+          </div>
+          <div class="john">
+            <h3>John Doe</h3>
+            <h4>CEO and Co-owner</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Amet, aspernatur ratione sed cum ad officiis sint comque fugiat similique. Earum laudantium deleniti possimus? Voluptatem architecto repellendus harum sit voluptatum tempora.
+            </p>
+          </div>
+          <div class="cfo">
+            <img src="images/bob.jpg">
+          </div>
+          <div class="bob">
+            <h3>Bob Rite</h3>
+            <h4>CFO and Co-owner</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Amet, aspernatur ratione sed cum ad officiis sint comque fugiat similique. Earum laudantium deleniti possimus? Voluptatem architecto repellendus harum sit voluptatum tempora.</p>
+          </div>
+        </div>
+        <!--end container-->
+      </section>
+      <!--end section-team-->
+      <section class="section-contact">
+        <div class="container">
+          <!--h2, form, google maps embed, table on a grid-->
+          <h2>Contact Us</h2>
+          <form>
+            <label for="fname">Full name</label><br>
+            <input type="text" id="fname" name="fname"><br>
+            <label for="ename">Email</label><br>
+            <input type="text" id="ename" name="ename"><br><br>
+            <input type="submit" value="send">
+          </form>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d717628.8014569668!2d-76.95338657663346!3d45.36420215876662!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0718cc4a6ad7%3A0xc6cc467725843e2b!2sAlgonquin%20College%20Ottawa%20Campus!5e0!3m2!1sen!2sca!4v1669779467971!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <table>
+            <tr>
+              <th>Days</th>
+              <th>Hours</th>
+            </tr>
+            <tr>
+              <td>Monday-Friday</td>
+              <td>9AM - 6PM</td>
+            </tr>
+            <tr>
+              <td>Saturday-Sunday</td>
+              <td>Closed</td>
+            </tr>
+          </table>
+        </div>
+        <!--end container-->
+      </section>
+      <!--end section-contact-->
+    </main>
+    <footer>
+      <div class="container">
+        <!--2 paragraphs of text-->
+        <p>© Copyright Three Star Media, 2020</p>
+        <p>All images are taken from Unsplash</p>
+      </div>
+    </footer>
+  </body>
 </html>
