--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <section class="section-about">
         <div class="container">
           <!--image on the left, heading and paragraph on the right using flexbox-->
-          <img src="Images/about-us.jpg" alt="About Us">
+          <img src="images/about-us.jpg" alt="About Us">
           <h2>About Us</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Libero unde repellendus exercitationem asperiores ducimus placeat, maxime soluta nesciunt pariatur aliquam consequuntur sequi saepe sint praesentium laboriosam perferendis eius amet ad?
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Animi, velit ipsam? Atque accusamus, excepturi corrupti sunt reiciendis soluta quo commodi guidem, non perferendis vel sed facilis rerum cum in exercitationem?
@@ -53,7 +53,7 @@
           <!--h2 heading, 5 divs each with h3 image, text and button, on a grid-->
           <h2>Our Services</h2>
           <div class="digital transformation">
-            <img src="Images/digital.jpg" alt="Digital Transformation">
+            <img src="images/digital.jpg" alt="Digital Transformation">
             <h3>Digital Transformation</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Eius vel, rem inventore quo tempora animi mollitia eaque error qui consectetur in reprehenderit magnam at vitae corporis quaerat deleniti explicabo nisi?</p>
             <button>Digital Plans ▶</button>
