--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
       <nav>
         <div class="container">
-          <img src="images/logo.png" alt="Three Star Media">
+          <img src="Images/logo.png" alt="Three Star Media">
           <ul>
             <li> <a href="#">Home</a></li>
             <li> <a href="#">About Us</a></li>
@@ -28,7 +28,7 @@
       </nav>
       <div class="header-welcome">
       <div class="container">
-        <img src="images/main-banner.jpg">
+        <img src="Images/main-banner.jpg">
         <h1>Welcome to Three Star Media</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt vitae inventore nostrum reprehenderit officia officiis, excepturi hic corporis recusandae, voluptatibus repudiandae velit temporibus ullam, possimus sint iste quo in et?</p>
         <button>Connect with us ▶</button>
@@ -39,7 +39,7 @@
       <section class="section-about">
         <div class="container">
           <!--image on the left, heading and paragraph on the right using flexbox-->
-          <img src="images/about-us.jpg" alt="About Us">
+          <img src="Images/about-us.jpg" alt="About Us">
           <h2>About Us</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Libero unde repellendus exercitationem asperiores ducimus placeat, maxime soluta nesciunt pariatur aliquam consequuntur sequi saepe sint praesentium laboriosam perferendis eius amet ad?
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Animi, velit ipsam? Atque accusamus, excepturi corrupti sunt reiciendis soluta quo commodi guidem, non perferendis vel sed facilis rerum cum in exercitationem?
@@ -53,31 +53,31 @@
           <!--h2 heading, 5 divs each with h3 image, text and button, on a grid-->
           <h2>Our Services</h2>
           <div class="digital transformation">
-            <img src="images/digital.jpg" alt="Digital Transformation">
+            <img src="Images/digital.jpg" alt="Digital Transformation">
             <h3>Digital Transformation</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Eius vel, rem inventore quo tempora animi mollitia eaque error qui consectetur in reprehenderit magnam at vitae corporis quaerat deleniti explicabo nisi?</p>
             <button>Digital Plans ▶</button>
           </div>
           <div class="marketing">
-            <img src="images/marketing.jpg" alt="Marketing">
+            <img src="Images/marketing.jpg" alt="Marketing">
             <h3>Marketing</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Eius vel, rem inventore quo tempora animi mollitia eaque error qui consectetur in reprehenderit magnam at vitae corporis quaerat deleniti explicabo nisi?</p>
             <button>Marketing Plans ▶</button>
           </div>
           <div class="video production">
-            <img src="images/video.jpg" alt="Video Production">
+            <img src="Images/video.jpg" alt="Video Production">
             <h3>Video Production</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Eius vel, rem inventore quo tempora animi mollitia eaque error qui consectetur in reprehenderit magnam at vitae corporis quaerat deleniti explicabo nisi?</p>
             <button>Video Plans ▶</button>
           </div>
           <div class="web development">
-            <img src="images/web.jpg" alt="Web Development">
+            <img src="Images/web.jpg" alt="Web Development">
             <h3>Web Development</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Eius vel, rem inventore quo tempora animi mollitia eaque error qui consectetur in reprehenderit magnam at vitae corporis quaerat deleniti explicabo nisi?</p>
             <button>Web Plans ▶</button>
           </div>
           <div class="print plans">
-            <img src="images/print.jpg" alt="Print Plans">
+            <img src="Images/print.jpg" alt="Print Plans">
             <h3>Print Plans</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Eius vel, rem inventore quo tempora animi mollitia eaque error qui consectetur in reprehenderit magnam at vitae corporis quaerat deleniti explicabo nisi?</p>
             <button>Print Plans ▶</button>
@@ -89,7 +89,7 @@
       <section class="section-vision">
         <div class="container">
           <!--h3 paragraph and button -->
-          <img src="images/vision.jpg" alt="Our Vision">
+          <img src="Images/vision.jpg" alt="Our Vision">
           <h3>Our Vision</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Ex voluptatem deleniti lure, sit, accusantium rerum est commodi veniam tempora perspiciatis nobis officiis fagiat eaque. Veritatis exercitationem delectus ex ab laudantium.</p>
           <button>Learn More ▶ </button>
@@ -102,7 +102,7 @@
           <!--h2, 2 divs with an image, 2 divs with h3 h4 paragraph of text on a grid-->
           <h2>Our Team</h2>
           <div class="ceo">
-            <img src="images/john.jpg" alt="John Doe">
+            <img src="Images/john.jpg" alt="John Doe">
           </div>
           <div class="john">
             <h3>John Doe</h3>
@@ -111,7 +111,7 @@
             </p>
           </div>
           <div class="cfo">
-            <img src="images/bob.jpg" alt="Bob Rite">
+            <img src="Images/bob.jpg" alt="Bob Rite">
           </div>
           <div class="bob">
             <h3>Bob Rite</h3>
