--- a/index.html
+++ b/index.html
@@ -130,7 +130,10 @@
             <label for="fname">Full name</label><br>
             <input type="text" id="fname" name="fname"><br>
             <label for="ename">Email</label><br>
-            <input type="text" id="ename" name="ename"><br><br>
+            <input type="text" id="ename" name="ename"><br>
+            <label for="message">Message</label><br>
+            <textarea id="message" name="Message" rows="4" cols="50"></textarea>
+            </textarea>
             <input type="submit" value="send">
           </form>
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d717628.8014569668!2d-76.95338657663346!3d45.36420215876662!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0718cc4a6ad7%3A0xc6cc467725843e2b!2sAlgonquin%20College%20Ottawa%20Campus!5e0!3m2!1sen!2sca!4v1669779467971!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
