--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
       </nav>
       <div class="header-welcome">
       <div class="container">
-        <img src="Images/main-banner.jpg">
+        <img src="Images/main-banner.jpg" alt="Main Banner">
         <h1>Welcome to Three Star Media</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt vitae inventore nostrum reprehenderit officia officiis, excepturi hic corporis recusandae, voluptatibus repudiandae velit temporibus ullam, possimus sint iste quo in et?</p>
         <button>Connect with us ▶</button>
       </div>
-      <!--end container-->
+     </div> <!--end container-->
     </header>
     <main>
       <section class="section-about">
@@ -133,7 +133,6 @@
             <input type="text" id="ename" name="ename"><br>
             <label for="message">Message</label><br>
             <textarea id="message" name="Message" rows="4" cols="50"></textarea>
-            </textarea>
             <input type="submit" value="send">
           </form>
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d717628.8014569668!2d-76.95338657663346!3d45.36420215876662!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0718cc4a6ad7%3A0xc6cc467725843e2b!2sAlgonquin%20College%20Ottawa%20Campus!5e0!3m2!1sen!2sca!4v1669779467971!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
