--- a/index.html
+++ b/index.html
@@ -1,166 +1,183 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3 star media</title>
-  </head>
-  <body>
-    <header>
-      <nav>
-        <div class="container">
-          <img src="Images/logo.png" alt="Three Star Media">
-          <ul>
-            <li> <a href="#">Home</a></li>
-            <li> <a href="#">About Us</a></li>
-            <li> <a href="#">Services</a></li>
-            <li> <a href="#">Team</a></li>
-            <li> <a href="#">Contact Us</a></li>
-          </ul>
-          <form>
-            <input type="search">
-            <button>	
-            &#128269;</button>
-          </form>
-        </div>
-        <!--end container-->
-      </nav>
-      <div class="header-welcome">
-      <div class="container">
-        <img src="Images/main-banner.jpg" alt="Main Banner">
-        <h1>Welcome to Three Star Media</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt vitae inventore nostrum reprehenderit officia officiis, excepturi hic corporis recusandae, voluptatibus repudiandae velit temporibus ullam, possimus sint iste quo in et?</p>
-        <button>Connect with us ▶</button>
-      </div>
-     </div> <!--end container-->
-    </header>
-    <main>
-      <section class="section-about">
-        <div class="container">
-          <!--image on the left, heading and paragraph on the right using flexbox-->
-          <img src="Images/about-us.jpg" alt="About Us">
-          <h2>About Us</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Libero unde repellendus exercitationem asperiores ducimus placeat, maxime soluta nesciunt pariatur aliquam consequuntur sequi saepe sint praesentium laboriosam perferendis eius amet ad?
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Animi, velit ipsam? Atque accusamus, excepturi corrupti sunt reiciendis soluta quo commodi guidem, non perferendis vel sed facilis rerum cum in exercitationem?
-          </p>
-        </div>
-        <!--end container-->
-      </section>
-      <!--end section-about-->
-      <section class="section-services">
-        <div class="container">
-          <!--h2 heading, 5 divs each with h3 image, text and button, on a grid-->
-          <h2>Our Services</h2>
-          <div class="digital transformation">
-            <img src="Images/digital.jpg" alt="Digital Transformation">
-            <h3>Digital Transformation</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Eius vel, rem inventore quo tempora animi mollitia eaque error qui consectetur in reprehenderit magnam at vitae corporis quaerat deleniti explicabo nisi?</p>
-            <button>Digital Plans ▶</button>
-          </div>
-          <div class="marketing">
-            <img src="Images/marketing.jpg" alt="Marketing">
-            <h3>Marketing</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Eius vel, rem inventore quo tempora animi mollitia eaque error qui consectetur in reprehenderit magnam at vitae corporis quaerat deleniti explicabo nisi?</p>
-            <button>Marketing Plans ▶</button>
-          </div>
-          <div class="video production">
-            <img src="Images/video.jpg" alt="Video Production">
-            <h3>Video Production</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Eius vel, rem inventore quo tempora animi mollitia eaque error qui consectetur in reprehenderit magnam at vitae corporis quaerat deleniti explicabo nisi?</p>
-            <button>Video Plans ▶</button>
-          </div>
-          <div class="web development">
-            <img src="Images/web.jpg" alt="Web Development">
-            <h3>Web Development</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Eius vel, rem inventore quo tempora animi mollitia eaque error qui consectetur in reprehenderit magnam at vitae corporis quaerat deleniti explicabo nisi?</p>
-            <button>Web Plans ▶</button>
-          </div>
-          <div class="print plans">
-            <img src="Images/print.jpg" alt="Print Plans">
-            <h3>Print Plans</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Eius vel, rem inventore quo tempora animi mollitia eaque error qui consectetur in reprehenderit magnam at vitae corporis quaerat deleniti explicabo nisi?</p>
-            <button>Print Plans ▶</button>
-          </div>
-        </div>
-        <!--end container-->
-      </section>
-      <!--end section-services-->
-      <section class="section-vision">
-        <div class="container">
-          <!--h3 paragraph and button -->
-          <img src="Images/vision.jpg" alt="Our Vision">
-          <h3>Our Vision</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Ex voluptatem deleniti lure, sit, accusantium rerum est commodi veniam tempora perspiciatis nobis officiis fagiat eaque. Veritatis exercitationem delectus ex ab laudantium.</p>
-          <button>Learn More ▶ </button>
-        </div>
-        <!--end container-->
-      </section>
-      <!--end section-vision-->
-      <section class="section-team">
-        <div class="container">
-          <!--h2, 2 divs with an image, 2 divs with h3 h4 paragraph of text on a grid-->
-          <h2>Our Team</h2>
-          <div class="ceo">
-            <img src="Images/john.jpg" alt="John Doe">
-          </div>
-          <div class="john">
-            <h3>John Doe</h3>
-            <h4>CEO and Co-owner</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Amet, aspernatur ratione sed cum ad officiis sint comque fugiat similique. Earum laudantium deleniti possimus? Voluptatem architecto repellendus harum sit voluptatum tempora.
-            </p>
-          </div>
-          <div class="cfo">
-            <img src="Images/bob.jpg" alt="Bob Rite">
-          </div>
-          <div class="bob">
-            <h3>Bob Rite</h3>
-            <h4>CFO and Co-owner</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Amet, aspernatur ratione sed cum ad officiis sint comque fugiat similique. Earum laudantium deleniti possimus? Voluptatem architecto repellendus harum sit voluptatum tempora.</p>
-          </div>
-        </div>
-        <!--end container-->
-      </section>
-      <!--end section-team-->
-      <section class="section-contact">
-        <div class="container">
-          <!--h2, form, google maps embed, table on a grid-->
-          <h2>Contact Us</h2>
-          <form>
-            <label for="fname">Full name</label><br>
-            <input type="text" id="fname" name="fname"><br>
-            <label for="ename">Email</label><br>
-            <input type="text" id="ename" name="ename"><br>
-            <label for="message">Message</label><br>
-            <textarea id="message" name="Message" rows="4" cols="50"></textarea>
-            <input type="submit" value="send">
-          </form>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d717628.8014569668!2d-76.95338657663346!3d45.36420215876662!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0718cc4a6ad7%3A0xc6cc467725843e2b!2sAlgonquin%20College%20Ottawa%20Campus!5e0!3m2!1sen!2sca!4v1669779467971!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-          <table>
-            <tr>
-              <th>Days</th>
-              <th>Hours</th>
-            </tr>
-            <tr>
-              <td>Monday-Friday</td>
-              <td>9AM - 6PM</td>
-            </tr>
-            <tr>
-              <td>Saturday-Sunday</td>
-              <td>Closed</td>
-            </tr>
-          </table>
-        </div>
-        <!--end container-->
-      </section>
-      <!--end section-contact-->
-    </main>
-    <footer>
-      <div class="container">
-        <!--2 paragraphs of text-->
-        <p>© Copyright Three Star Media, 2020</p>
-        <p>All images are taken from Unsplash</p>
-      </div>
-    </footer>
-  </body>
+   <head>
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>3 star media</title>
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+      <link href="css/styles.css" rel="stylesheet">
+   </head>
+   <body>
+      <header>
+         <nav>
+            <div class="container">
+               <ul class="nav-list">
+                  <img class="nav-item" src="Images/logo.png" alt="Three Star Media">
+                  <li class="nav-item"><a href="#">Home</a></li>
+                  <li class="nav-item"><a href="#">About Us</a></li>
+                  <li class="nav-item"><a href="#">Services</a></li>
+                  <li class="nav-item"><a href="#">Team</a></li>
+                  <li class="nav-item"><a href="#">Contact Us</a></li>
+                  <li class="nav-item"></li>
+                  <form>
+                     <input type="search" placeholder="Search">
+                     <button>	
+                     &#128269;</button>
+                  </form>
+                  </li>
+               </ul>
+            </div>
+            <!--end container-->
+         </nav>
+         <div class="header-welcome">
+            <div class="container">
+               <h1>Welcome to Three Star Media</h1>
+               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt vitae inventore nostrum reprehenderit officia officiis, excepturi hic corporis recusandae, voluptatibus repudiandae velit temporibus ullam, possimus sint iste quo in et?</p>
+               <button class="connect">Connect with us ▶</button>
+            </div>
+         </div>
+         <!--end container-->
+      </header>
+      <main>
+         <section class="section-about">
+            <div class="container" id="flex-main">
+               <!--image on the left, heading and paragraph on the right using flexbox-->
+               <img class="flex-pic" src="Images/about-us.jpg" alt="About Us">
+               <div class="main-content">
+                  <h2 class="aboutus">About Us</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Libero unde repellendus exercitationem asperiores ducimus placeat, maxime soluta nesciunt pariatur aliquam consequuntur sequi saepe sint praesentium laboriosam perferendis eius amet ad?</p>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Animi, velit ipsam? Atque accusamus, excepturi corrupti sunt reiciendis soluta quo commodi guidem, non perferendis vel sed facilis rerum cum in exercitationem?
+                  </p>
+               </div>
+            </div>
+            <!--end container-->
+         </section>
+         <!--end section-about-->
+         <section class="section-services">
+            <h2 class="ourserv">Our Services</h2>
+            <div class="container">
+               <!--h2 heading, 5 divs each with h3 image, text and button, on a grid-->
+               <div class="services-grid1">
+                  <div class="digital-transformation">
+                     <img class="digital-jpg" src="Images/digital.jpg" alt="Digital Transformation">
+                     <h3>Digital Transformation</h3>
+                     <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Eius vel, rem inventore quo tempora animi mollitia eaque error qui consectetur in reprehenderit magnam at vitae corporis quaerat deleniti explicabo nisi?</p>
+                     <button>Digital Plans ▶</button>
+                  </div>
+                  <div class="marketing">
+                     <img class="marketing-jpg" src="Images/marketing.jpg" alt="Marketing">
+                     <h3>Marketing</h3>
+                     <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Eius vel, rem inventore quo tempora animi mollitia eaque error qui consectetur in reprehenderit magnam at vitae corporis quaerat deleniti explicabo nisi?</p>
+                     <button>Marketing Plans ▶</button>
+                  </div>
+               </div>
+               <div class="services-grid2">
+                  <div class="video-production">
+                     <img class="video-jpg" src="Images/video.jpg" alt="Video Production">
+                     <h3>Video Production</h3>
+                     <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Eius vel, rem inventore quo tempora animi mollitia eaque error qui consectetur in reprehenderit magnam at vitae corporis quaerat deleniti explicabo nisi?</p>
+                     <button>Video Plans ▶</button>
+                  </div>
+                  <div class="web-development">
+                     <img class="web-jpg" src="Images/web.jpg" alt="Web Development">
+                     <h3>Web Development</h3>
+                     <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Eius vel, rem inventore quo tempora animi mollitia eaque error qui consectetur in reprehenderit magnam at vitae corporis quaerat deleniti explicabo nisi?</p>
+                     <button>Web Plans ▶</button>
+                  </div>
+                  <div class="print-plans">
+                     <img class="print-jpg" src="Images/print.jpg" alt="Print Plans">
+                     <h3>Print Plans</h3>
+                     <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Eius vel, rem inventore quo tempora animi mollitia eaque error qui consectetur in reprehenderit magnam at vitae corporis quaerat deleniti explicabo nisi?</p>
+                     <button>Print Plans ▶</button>
+                  </div>
+               </div>
+            </div>
+            <!--end container-->
+         </section>
+         <!--end section-services-->
+         <section class="section-vision">
+            <div class="container">
+               <!--h3 paragraph and button -->
+               <h3 class="vision-header">Our Vision</h3>
+               <p class="vision-text">Lorem ipsum dolor sit amet consectetur adipiscing elit. Ex voluptatem deleniti lure, sit, accusantium rerum est commodi veniam tempora perspiciatis nobis officiis fagiat eaque. Veritatis exercitationem delectus ex ab laudantium.</p>
+               <button>Learn More ▶ </button>
+            </div>
+            <!--end container-->
+         </section>
+         <!--end section-vision-->
+         <section class="section-team">
+            <div class="container" id="team-grid">
+               <!--h2, 2 divs with an image, 2 divs with h3 h4 paragraph of text on a grid-->
+               <h2 class="ourteam">Our Team</h2>
+               <div class="ceo">
+                  <img class="ceo-jpg" src="Images/john.jpg" alt="John Doe">
+               </div>
+               <div class="john">
+                  <h3>John Doe</h3>
+                  <h4>CEO and Co-owner</h4>
+                  <p class="johnp">Lorem ipsum dolor sit amet consectetur adipiscing elit. Amet, aspernatur ratione sed cum ad officiis sint comque fugiat similique. Earum laudantium deleniti possimus? Voluptatem architecto repellendus harum sit voluptatum tempora.
+                  </p>
+               </div>
+               <div class="cfo">
+                  <img class="cfo-jpg" src="Images/bob.jpg" alt="Bob Rite">
+               </div>
+               <div class="bob">
+                  <h3>Bob Rite</h3>
+                  <h4>CFO and Co-owner</h4>
+                  <p class="bobp">Lorem ipsum dolor sit amet consectetur adipiscing elit. Amet, aspernatur ratione sed cum ad officiis sint comque fugiat similique. Earum laudantium deleniti possimus? Voluptatem architecto repellendus harum sit voluptatum tempora.</p>
+               </div>
+            </div>
+            <!--end container-->
+         </section>
+         <!--end section-team-->
+         <section class="section-contact">
+            <div class="container">
+               <!--h2, form, google maps embed, table on a grid-->
+               <div class="last-grid">
+                  <h2 class="contacth">Contact Us</h2>
+                  <h3>Send us a message</h3>
+                  <form class="message-us">
+                     <label for="fname">Full name</label><br>
+                     <input class="firstname" type="text" id="fname" name="fname"><br>
+                     <label for="ename">Email</label><br>
+                     <input class="email" type="text" id="ename" name="ename"><br>
+                     <label for="message">Message</label><br>
+                     <textarea class="message" id="message" name="Message" rows="4" cols="50"></textarea>
+                     <input class="send-button" type="submit" value="Send">
+                  </form>
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d717628.8014569668!2d-76.95338657663346!3d45.36420215876662!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0718cc4a6ad7%3A0xc6cc467725843e2b!2sAlgonquin%20College%20Ottawa%20Campus!5e0!3m2!1sen!2sca!4v1669779467971!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+               </div>
+               <h3>Hours of Operation</h3>
+               <div class="hours-table">
+                  <table class="hours">
+                     <tr>
+                        <th>Days</th>
+                        <th>Hours</th>
+                     </tr>
+                     <tr>
+                        <td>Monday-Friday</td>
+                        <td>9AM - 6PM</td>
+                     </tr>
+                     <tr>
+                        <td>Saturday-Sunday</td>
+                        <td>Closed</td>
+                     </tr>
+                  </table>
+               </div>
+            </div>
+            <!--end container-->
+         </section>
+         <!--end section-contact-->
+      </main>
+      <footer class="foot">
+         <div class="container">
+            <!--2 paragraphs of text-->
+            <p>© Copyright Three Star Media, 2020</p>
+            <p>All images are taken from Unsplash</p>
+         </div>
+      </footer>
+   </body>
 </html>
